# BaldavengerOFX

./: Makefile  Makefile.master  README.md
ACESPlugin/: ACESCudaKernel.cu  ACESMetalKernel.mm  ACESPlugin.h  ACESPlugin.sln  ACESPlugin.vcxproj  ACESPluginAMD.cpp  ACESPluginCPU.cpp  ACESPluginCUDA.cpp  ACESPluginMETAL.cpp  ACES_LIB_CPU.h  ACES_LIB_CUDA.h  Makefile
ACES_OFX/: ACESCudaKernel.cu  ACESOpenCLKernel.cpp  ACESPlugin.cpp  ACESPlugin.sln  ACESPlugin.vcxproj  ACESPluginCPU.cpp  Makefile
ACES_OFX_Natron/: ACESPlugin.cpp  ACESPlugin.vcxproj  Makefile
ChannelBox/: ChannelBoxCudaKernel.cu  ChannelBoxCudaKernel.cuh  ChannelBoxMetalKernel.mm  ChannelBoxOpenCLKernel.cpp  ChannelBoxPlugin.cpp  ChannelBoxPlugin.h  ChannelBoxPlugin.sln  ChannelBoxPlugin.vcxproj  ChannelBoxPluginAMD.cpp  ChannelBoxPluginCL.cpp  ChannelBoxPluginCPU.cpp  ChannelBoxPluginCUDA.cpp  ChannelBoxPluginMETAL.cpp  Makefile
Convolution/: ConvolutionCudaKernel.cu  ConvolutionCudaKernel.cuh  ConvolutionMetalKernel.mm  ConvolutionOpenCLKernel.cpp  ConvolutionPlugin.cpp  ConvolutionPlugin.h  ConvolutionPlugin.sln  ConvolutionPlugin.vcxproj  ConvolutionPluginAMD.cpp  ConvolutionPluginCL.cpp  ConvolutionPluginCPU.cpp  ConvolutionPluginCUDA.cpp  ConvolutionPluginMETAL.cpp  Makefile
FilmGrade/: FilmGradeCudaKernel.cu  FilmGradeMetalKernel.mm  FilmGradeOpenCLKernel.cpp  FilmGradePlugin.cpp  FilmGradePlugin.h  FilmGradePlugin.sln  FilmGradePlugin.vcxproj  FilmGradePluginAMD.cpp  FilmGradePluginCL.cpp  FilmGradePluginCPU.cpp  FilmGradePluginCUDA.cpp  FilmGradePluginMETAL.cpp  Makefile
FreqEQ/: FreqEQCudaKernel.cu  FreqEQCudaKernel.cuh  FreqEQMetalKernel.mm  FreqEQPlugin.h  FreqEQPlugin.sln  FreqEQPlugin.vcxproj  FreqEQPluginCUDA.cpp  FreqEQPluginMETAL.cpp  Makefile
FreqSep/: FreqSepCudaKernel.cu  FreqSepCudaKernel.cuh  FreqSepMetalKernel.mm  FreqSepOpenCLKernel.cpp  FreqSepPlugin.h  FreqSepPlugin.sln  FreqSepPlugin.vcxproj  FreqSepPluginAMD.cpp  FreqSepPluginCPU.cpp  FreqSepPluginCUDA.cpp  FreqSepPluginMETAL.cpp  Makefile
Frequency/: FrequencyCudaKernel.cu  FrequencyCudaKernel.cuh  FrequencyOpenCLKernel.cpp  FrequencyPlugin.cpp  FrequencyPlugin.h  FrequencyPlugin.sln  FrequencyPlugin.vcxproj  FrequencyPluginCL.cpp  FrequencyPluginCPU.cpp  Makefile
HueConverge/: HueConvergeCudaBlur.h  HueConvergeCudaKernel.cu  HueConvergeCudaKernel.cuh  HueConvergeCudaKernel.h  HueConvergeMetalKernel.mm  HueConvergeOpenCLKernel.cpp  HueConvergePlugin.cpp  HueConvergePlugin.h  HueConvergePlugin.sln  HueConvergePlugin.vcxproj  HueConvergePluginAMD.cpp  HueConvergePluginCL.cpp  HueConvergePluginCPU.cpp  HueConvergePluginCUDA.cpp  HueConvergePluginMETAL.cpp  Makefile
Matrix/: Makefile  MatrixCudaKernel.cu  MatrixMetalKernel.mm  MatrixOpenCLKernel.cpp  MatrixPlugin.cpp  MatrixPlugin.h  MatrixPlugin.sln  MatrixPlugin.vcxproj  MatrixPluginAMD.cpp  MatrixPluginCL.cpp  MatrixPluginCPU.cpp  MatrixPluginCUDA.cpp  MatrixPluginMETAL.cpp
Qualifier/: Makefile  QualifierCudaKernel.cu  QualifierCudaKernel.cuh  QualifierMetalKernel.mm  QualifierOpenCLKernel.cpp  QualifierPlugin.cpp  QualifierPlugin.h  QualifierPlugin.sln  QualifierPlugin.vcxproj  QualifierPluginAMD.cpp  QualifierPluginCL.cpp  QualifierPluginCPU.cpp  QualifierPluginCUDA.cpp  QualifierPluginMETAL.cpp
Replace/: Makefile  ReplaceCudaKernel.cu  ReplaceCudaKernel.cuh  ReplaceMetalKernel.mm  ReplaceOpenCLKernel.cpp  ReplacePlugin.cpp  ReplacePlugin.h  ReplacePlugin.sln  ReplacePlugin.vcxproj  ReplacePluginAMD.cpp  ReplacePluginCL.cpp  ReplacePluginCPU.cpp  ReplacePluginCUDA.cpp  ReplacePluginMETAL.cpp
ResolveMath/: Makefile  ResolveMath.cpp  ResolveMath.h  ResolveMath.sln  ResolveMath.vcxproj  ResolveMathPlugin.sln  ResolveMathPlugin.vcxproj  ResolveMathPluginCPU.cpp
ResolveMathxtra/: Makefile  ResolveMathxtra.cpp  ResolveMathxtra.sln  ResolveMathxtra.vcxproj  ResolveMathxtraPlugin.h  ResolveMathxtraPlugin.sln  ResolveMathxtraPlugin.vcxproj  ResolveMathxtraPluginCPU.cpp
Sauron/: Makefile  SauronCudaKernel.cu  SauronPlugin.cpp  SauronPlugin.h  SauronPlugin.vcxproj
Scan/: Makefile  ScanCudaKernel.cu  ScanPlugin.h  (+11 more)
SupportExt/OpenCLUtilities/: CMakeLists.txt  README  histogram-pyramids.cpp  histogram-pyramids.hpp  openCLGLUtilities.cpp  openCLGLUtilities.hpp  openCLUtilities.cpp  openCLUtilities.hpp
SupportExt/OpenCLUtilities/CMake/: OCL-UtilitiesConfig.cmake.in  OCL-UtilitiesUse.cmake
SupportExt/OpenCLUtilities/OpenCL/: cl.hpp
SupportExt/SIPL/: CMakeLists.txt  Core.cpp  Core.hpp  Exceptions.hpp  IntensityTransformations.hpp  README.md  Types.cpp  Types.hpp  Visualization.cpp  Visualization.hpp
SupportExt/SIPL/CMake/: SIPLConfig.cmake.in  SIPLUse.cmake
SupportExt/SIPL/tests/: CMakeLists.txt  CoreTests.cpp  Tests.cpp  Tests.hpp  TypesTests.cpp
(+439 files in other folders)
